--- a/src/assets/styles/components/MenuGame.scss
+++ b/src/assets/styles/components/MenuGame.scss
@@ -1,25 +1,33 @@
 @import "../Variables.scss";
 
 .menu-game {
-  width: 20%;
-  height: calc(100vh - 20%);
+  width: 30%;
+  height: calc(100vh - 50%);
   color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: rgba(106, 172, 212, 0.2);
+  border-radius: 15px;
 }
 
 .menu-game img {
-  width: 50px;
+  padding: 30px 20px;
+}
+
+.menu-item img {
+  width: 30px;
+  padding: 0 20px;
 }
 
 .menu-item {
   display: flex;
-  justify-content: space-around;
   align-items: center;
   width: 80%;
   padding: 10px;
+  font-size: 25px;
+  font-weight: 900;
 }
 
 .menu-levels {
@@ -37,14 +45,19 @@
   margin: 10px;
   border-radius: 25px;
   cursor: pointer;
+  font-weight: 900;
 }
 
 .level-option:hover {
   filter: brightness(120%);
+  color: black;
+  text-decoration: underline;
 }
 
-.level-option .active {
+.level-option.active {
   filter: brightness(120%);
+  color: black;
+  text-decoration: underline;
 }
 
 .level-option[name="1"] {
